Try including non-code files in package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "typer"
 ]
 
+[tool.flit.sdist]
+include = ["Dockerfile", "index.html", "example.source.json"]
+
 [project.urls]
 Home = "https://github.com/tomdyson/microllama"
 
