--- a/microllama/Dockerfile
+++ b/microllama/Dockerfile
@@ -5,6 +5,6 @@ RUN pip install microllama
 WORKDIR /app
 COPY ./ /app
 # uncomment these lines to generate your index at container build time
-# ENV OPENAI_API_KEY=sk-etc
+# ENV OPENAI_API_KEY={openai_api_key}
 # RUN microllama index
 CMD ["microllama"]
