Create index at container build time by default

--- a/microllama/Dockerfile
+++ b/microllama/Dockerfile
@@ -4,7 +4,8 @@ EXPOSE 8080
 RUN pip install microllama
 WORKDIR /app
 COPY ./ /app
-# uncomment these lines to generate your index at container build time
-# ENV OPENAI_API_KEY={openai_api_key}
-# RUN microllama index
+# Remove these two lines if you don't want to
+# generate your index at container build time
+ENV OPENAI_API_KEY={openai_api_key}
+RUN microllama index
 CMD ["microllama"]
