Add tiktoken to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
 dependencies = [
     "langchain", 
+    "tiktoken",
     "faiss-cpu",
     "openai",
     "fastapi",
