Support model selection

--- a/microllama/Dockerfile
+++ b/microllama/Dockerfile
@@ -9,5 +9,7 @@ COPY ./ /app
 ENV OPENAI_API_KEY={openai_api_key}
 # Uncomment this line to enable debug mode
 # ENV DEBUG=True
+# Uncomment this line to switch model from gpt-3.5-turbo
+# ENV MODEL=gpt-4
 RUN microllama index
 CMD ["microllama"]
