--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "fastapi",
     "uvicorn[standard]",
     "sse-starlette",
-    "typer"
+    "typer",
+    "llm",
+    "llm-openai"
 ]
 
 [project.urls]
